# Bank-Term-Deposit-Prediction

./: .gitignore  .pre-commit-config.yaml  config.yaml  main.py  pyproject.toml
.kaggle/: kaggle.json
dags/: training_dag.py
data/current/: current_batch.parquet
data/processed/: X_test.parquet  y_test.parquet  y_train.parquet
docs/: architecture.md  data_dictionary.md  dataset.md  drift_plan.md
models/: catboost_model.pkl
notebook/: eda.ipynb
reports/: data_drift_report.html  data_quality_report.html  drift_tests_report.html  target_drift_report.html
src/: __init__.py
src/data/: __init__.py  ingest.py  simulate_drift.py
src/features/: __init__.py  transform.py
src/models/: __init__.py  train.py  validate.py
src/monitoring/: generate_drift.py
