[project]
name = "bank-term-deposit-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost==1.2.8",
    "evidently>=0.7.12",
    "kaggle==1.7.4.5",
    "matplotlib==3.10.5",
    "mlflow==3.3.1",
    "numpy==2.2.6",
    "pandas==2.3.2",
    "scikit-learn==1.7.1",
    "seaborn==0.13.2",
]

[dependency-groups]
dev = [
    "pre-commit==4.3.0",
    "pytest==8.4.1",
]
